loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: reassignment to val
while(estFaceMur=false){
                ^